AC_INIT(include/colibri/colibri.h)
AC_CANONICAL_HOST
AC_PREREQ(2.50)

AH_TEMPLATE([PACKAGE], [Package name.])
AH_TEMPLATE([VERSION], [Version of the package.])
AH_TEMPLATE([ENABLE_DEBUG], [Enable debug info.])
AH_TEMPLATE([ENABLE_GSSRPC], [Enable gssrpc.])

PACKAGE=colibri
VERSION=0.1

AM_INIT_AUTOMAKE($PACKAGE, $VERSION)
AM_CONFIG_HEADER(config.h)

AC_PROG_CC
AC_PROG_CPP
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_LIBTOOL
AC_PROG_AWK

AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS([printf.h db.h errno.h fcntl.h stdint.h stdlib.h memory.h rpc/pmap_clnt.h netinet/in.h \
string.h sys/socket.h sys/ioctl.h sys/mount.h sys/vfs.h sys/time.h unistd.h rpc/rpc.h pthread.h])

AC_C_BIGENDIAN
AC_C_CONST
AC_C_INLINE
AC_TYPE_SIZE_T

AC_PROG_GCC_TRADITIONAL
AC_CHECK_FUNCS(memset)
AC_SYS_LARGEFILE

AC_ARG_ENABLE(debug,
        [--disable-debug        disable debug information], , 
            enable_debug=yes
)

AC_ARG_ENABLE(server,
        [--disable-server       disable server build], , 
            enable_server=yes
)

AC_ARG_ENABLE(client,
        [--disable-client       disable client build], , 
            enable_client=yes
)

AC_ARG_ENABLE(gssrpc,
        [--disable-gssrpc       disable gssrpc],
            disable_gssrpc=yes
)

if test x$enable_server = xyes; then
    AC_ARG_WITH(db4,
    	[--with-db4             prefix of where db4 was built], ,
    )

    LIBS=""
    CFLAGS=""

    if test x$with_db4 != x; then
        DB4SRC="$with_db4"
	if ! test -f $DB4SRC/build_unix/libdb-4.8.la; then
		AC_MSG_ERROR($DB4SRC/build_unix/libdb-4.8.la not found! Did you build db-4?)
	fi
	pwd=$(pwd)
	cwd="$(pwd)/$srcdir"
	
	cd $DB4SRC/dist
        awk -f $DB4SRC/dist/gen_rec.awk \
	    -v source_file=$cwd/src/fol/colibri_fol.c \
	    -v header_file=$cwd/src/fol/colibri_fol.h \
	    -v print_file=$cwd/src/fol/colibri_fol_print.c \
	    -v template_file=$cwd/src/fol/folibri_fol_template.0.c < $cwd/src/fol/colibri_fol.src || exit
        cd $pwd

	DB4LIBS="$DB4SRC/build_unix/libdb-4.8.la"
	AC_SUBST(DB4LIBS)
	AC_SUBST(DB4SRC)
    else
	AC_MSG_ERROR(Cannot build server without --with-db4)
    fi
fi

if test x$enable_gssrpc = xyes; then
    AC_CHECK_LIB(gssrpc, xdr_int, , 
	AC_MSG_ERROR(libgssrpc cannot be found!)
    )

    AC_CHECK_HEADERS([gssrpc/pmap_clnt.h gssrpc/rpc.h], , 
	AC_MSG_ERROR(gssrpc/pmap_clnt.h gssrpc/rpc.h cannot be found!)
    )
    AC_DEFINE(ENABLE_GSSRPC)
fi

AM_CONDITIONAL(ENABLE_SERVER, test x$enable_server = xyes)
AM_CONDITIONAL(ENABLE_CLIENT, test x$enable_client = xyes)

if test x$enable_debug = xyes; then
        CFLAGS="$CFLAGS -O0 -g"
        AC_DEFINE(ENABLE_DEBUG)
else
	CFLAGS="$CFLAGS -O2"
fi

AC_CHECK_LIB(nsl, xdr_domainname, , 
        AC_MSG_ERROR(libnsl cannot be found!)
)

AC_CHECK_LIB(pthread, pthread_create, , 
        AC_MSG_ERROR(libpthread cannot be found!)
)

AC_OUTPUT([
        Makefile
        doc/Makefile
        man/Makefile
        tests/Makefile
        include/Makefile
        include/colibri/Makefile
        src/Makefile
        src/addb/Makefile
        src/ctdb/Makefile
        src/fol/Makefile
        src/sns/Makefile
        src/nrs/Makefile
])
