noinst_LTLIBRARIES            = libcolibri-desim.la
libcolibri_desim_la_SOURCES   = \
                                chs.c \
                                chs.h \
                                client.c \
                                client.h \
                                cnt.c \
                                cnt.h \
                                elevator.c \
                                elevator.h \
                                net.c \
                                net.h \
                                sim \
                                sim.c \
                                sim.h \
                                storage.h \
                                test.c

INCLUDES                      = -I. -I$(top_srcdir) -I$(top_srcdir)/include

