desimdir                      = $(includedir)/colibri/desim
desim_HEADERS                 = chs.h client.h cnt.h elevator.h net.h sim.h storage.h

noinst_LTLIBRARIES            = libcolibri-desim.la
libcolibri_desim_la_SOURCES   = \
                                chs.c \
                                chs.h \
                                client.c \
                                client.h \
                                cnt.c \
                                cnt.h \
                                elevator.c \
                                elevator.h \
                                net.c \
                                net.h \
                                sim.c \
                                sim.h \
                                storage.h

INCLUDES                      = -iquote . -iquote $(top_srcdir) -iquote $(top_srcdir)/include

